--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Metadata
-group=org.spongepowered
+group=xyz.xenondevs.configurate
 version=4.2.0-SNAPSHOT
 
 javadocPublishRoot=https://jd.spongepowered.org/configurate/
