Change shadowJar relocate path

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 }
 
 tasks.jar {
-    manifest.attributes["Automatic-Module-Name"] = "${project.group}.configurate"
+    manifest.attributes["Automatic-Module-Name"] = project.group
 }
 
 tasks {
