--- a/format/yaml/build.gradle
+++ b/format/yaml/build.gradle
@@ -22,7 +22,7 @@ tasks {
         dependsOn ':core:jar' // why?
         configurations = [project.configurations.shaded]
         minimize()
-        relocate("org.yaml.snakeyaml", "${project.group}.configurate.yaml.internal.snakeyaml")
+        relocate("org.yaml.snakeyaml", "org.spongepowered.configurate.yaml.internal.snakeyaml")
     }
 
     assemble {
